--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>西條翼のポートフォリオ</title>
-  <link rel="stylesheet" href="css/stylesheet_portfolio.css">
+  <link rel="stylesheet" href="stylesheet_portfolio.css">
   <!-- <link rel="text/javascript" href="/css/stylesheet.js"> -->
   <script src="https://kit.fontawesome.com/63bee99ef6.js"></script>
 </head>
@@ -33,7 +33,7 @@
         </div>
         <div class="clear"></div>
       </div>
-      <img class="myself" src="img/myself.jpg">
+      <img class="myself" src="myself.jpg">
       <ul class="informations">
         <li>
           <div class="information">
@@ -69,9 +69,9 @@
       </ul>
       <div class="clear"></div>
       <div class="animation-wrapper">
-        <img class=animation id='mypic' src="img/picture1.png">
+        <img class=animation id='mypic' src="picture1.png">
         <script type="text/javascript">
-          var pics_src = new Array("img/picture1.png", "img/picture2.png", "img/picture3.png", "img/picture4.png");
+          var pics_src = new Array("picture1.png", "picture2.png", "picture3.png", "picture4.png");
           var num = -1;
           slideshow_timer();
           function slideshow_timer(){
