--- a/index.html
+++ b/index.html
@@ -133,21 +133,21 @@
       </div>
       <div class="icon">
         <h1 class="icon-name">facebook</h1>
-        <img class="icon-image" src="img/facebook.png">
+        <img class="icon-image" src="facebook.png">
         <div class="click">
           <a class="icon-link" href="https://www.facebook.com/profile.php?id=100040666963821">Click here.</a>
         </div>
       </div>
       <div class="icon">
         <h1 class="icon-name">twitter</h1>
-        <img class="icon-image" src="img/twitter.png">
+        <img class="icon-image" src="twitter.png">
         <div class="click">
           <a class="icon-link" href="https://twitter.com/saijojo0117">Click here.</a>
         </div>
       </div>
       <div class="icon">
         <h1 class="icon-name">instagram</h1>
-        <img class="icon-image" src="img/instagram.png">
+        <img class="icon-image" src="instagram.png">
         <div class="click">
           <a class="icon-link" href="https://www.instagram.com/saijojo110117/">Click here.</a>
         </div>
